# chatapp

./: Cargo.toml  README.md
migrations/: 20260320095801_initial_schema.sql  20260324123000_add_friendships.sql  20260324123001_add_user_blocks.sql  20260324123002_add_user_presence.sql  20260324123003_add_refresh_tokens.sql  20260324123004_rename_messages_table.sql  20260324123005_add_dm_schema.sql  20260410110000_enforce_dm_group_member_counts.sql
src/: error.rs  extractors.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs
src/handlers/: auth.rs  blocks.rs  dms.rs  friendships.rs  mod.rs  servers.rs  users.rs  websocket.rs
src/models/: auth.rs  blocks.rs  common.rs  dm.rs  enums.rs  friendship.rs  mod.rs  presence.rs  server.rs  user.rs  websocket.rs
src/repositories/: blocks.rs  dm.rs  friendship.rs  mod.rs  presence.rs  refresh_token.rs  server.rs  user.rs  user_repository.rs
src/routes/: auth.rs  blocks.rs  dms.rs  friends.rs  mod.rs  servers.rs  users.rs  websocket.rs
src/services/: auth.rs  auth_service.rs  blocks.rs  dm.rs  friendship.rs  mod.rs  presence.rs  server.rs  user.rs  user_service.rs
tests/: dm_handlers.rs  dm_repository.rs  dm_service.rs
tests/common/: mod.rs
