[package]
name = "chatapp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
axum = { version = "0.8.8", features = ["ws"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
futures = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "json",
    "chrono",
    "uuid",
] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5.3"
async-trait = "0.1.89"
sha2 = "0.11"
hex = "0.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
